--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@types/react": "~18.2.45",
     "expo": "^50.0.1",
     "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.3",
     "expo-splash-screen": "~0.26.3",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
